--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^17.0.0",
     "firebase": "^5.0.3",
+    "ios": "0.0.1",
     "lodash": "latest",
     "react": "^16.4.1",
     "react-native": "^0.56.0",
