--- a/package.json
+++ b/package.json
@@ -3,28 +3,30 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "eslint": "^4.14.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "firebase": "^5.0.3",
-    "ios": "0.0.1",
-    "lodash": "latest",
-    "react": "^16.4.1",
-    "react-native": "^0.56.0",
+    "eslint": "^7.17.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "firebase": "^8.2.1",
+    "ios": "^0.0.1",
+    "lodash": "^4.17.20",
+    "react": "^17.0.1",
+    "react-native": "^0.63.4",
     "react-native-communications": "^2.2.1",
-    "react-native-router-flux": "^4.0.0-beta.31",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "react-native-router-flux": "^4.2.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-jest": "23.4.2",
-    "babel-preset-react-native": "^5",
-    "jest": "23.4.2",
-    "react-test-renderer": "16.4.1"
+    "babel-jest": "^26.6.3",
+    "babel-preset-react-native": "^4.0.1",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1"
   },
   "jest": {
     "preset": "react-native"
